<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iguideu.Login.LoginActivity2"
    android:background="@color/Color_Base_Point">



    <ImageView
        android:layout_width="85.7dp"
        android:layout_height="118.7dp"
        android:src="@mipmap/textlogo"
        android:layout_marginTop="81.3dp"
        android:id="@+id/login_text_logo"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edit_login_id"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:hint="@string/Login2_xml_email"
        android:textSize="@dimen/All_Text_Size_Primary"
        android:textColor="@color/Color_White"
        android:paddingLeft="7dp"
        android:layout_below="@id/login_text_logo"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/Color_White"
        android:textColorHint="@color/Color_White"/>
    <EditText
        android:id="@+id/edit_login_pass"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:textColor="@color/Color_White"
        android:hint="@string/Login2_xml_pass"
        android:textSize="@dimen/All_Text_Size_Primary"
        android:paddingLeft="7dp"
        android:layout_below="@id/edit_login_id"
        android:layout_marginTop="23dp"
        android:backgroundTint="@color/Color_White"
        android:textColorHint="@color/Color_White"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login2_xml_find_pass"
        android:textSize="@dimen/All_Text_Size_Primary"
        android:textColor="@color/Color_All_Primary_Text"
        android:id="@+id/text_login_find_pass"
        android:layout_alignBaseline="@+id/edit_login_pass"
        android:layout_alignBottom="@+id/edit_login_pass"
        android:layout_alignEnd="@+id/edit_login_pass"
        android:layout_marginEnd="30dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login2_xml_Sign_Up"
        android:textSize="@dimen/All_Text_Size_Primary"
        android:textColor="@color/Color_All_Primary_Text"
        android:id="@+id/text_login_sign_up"
        android:onClick="Login2Click"
        android:layout_below="@+id/edit_login_pass"
        android:layout_alignEnd="@+id/text_login_find_pass" />

    <Button
        android:layout_width="325.7dp"
        android:layout_height="51.8dp"
        android:textColor="@color/Color_White"
        android:background="@drawable/base_btn"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:text="@string/Login2_xml_Login_In_Btn"
        android:id="@+id/btn_login_check"
        android:onClick="Login2Click"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14.5dp"
        android:textSize="16sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_login_check"
        android:gravity="center"
        android:layout_marginBottom="24dp">
    
    <Button
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:background="@drawable/base_btn"
        android:onClick="Login2Click"
        android:id="@+id/btn_login_pref_check"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/Login2_xml_Auto_Login"
        android:layout_toRightOf="@id/btn_login_pref_check"
        android:gravity="center_vertical"
        android:textSize="@dimen/All_Text_Size_Primary"
        android:textColor="@color/Color_White"
        android:layout_marginLeft="6dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/login2_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_login_sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textSize="@dimen/All_Text_Size_Primary"
        android:textColor="@color/Color_Login_Error"
        android:visibility="gone"
        android:text="@string/Login2_xml_Error" />
</RelativeLayout>
