<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Color_Base_Point"
    tools:context="com.iguideu.Signup.SignUpProgress4">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/LoginProgress4_MainText"
        android:textColor="@color/Color_White"
        android:textSize="@dimen/LoginProgressTextSize_Main_Text"
        android:id="@+id/pg4_text"
        android:layout_marginTop="112dp"/>
    <EditText
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Color_White"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:id="@+id/edit_pg4_pass"
        android:hint="@string/LoginProgress4_Pass"
        android:textColor="@color/Color_White"
        android:textColorHint="@color/Color_White"
        android:textSize="@dimen/All_Text_Size_Primary"
        android:paddingLeft="15dp"
        android:layout_below="@id/pg4_text"
        android:layout_marginTop="120.3dp"/>
    <EditText
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Color_White"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:id="@+id/edit_pg4_pass_check"
        android:hint="@string/LoginProgress4_Pass_Check"
        android:textColor="@color/Color_White"
        android:textColorHint="@color/Color_White"
        android:textSize="@dimen/All_Text_Size_Primary"
        android:paddingLeft="15dp"
        android:layout_below="@id/edit_pg4_pass"
        android:layout_marginTop="49.3dp"/>

    <Button
        android:layout_width="325.7dp"
        android:layout_height="51.8dp"
        android:textColor="@color/Color_White"
        android:background="@drawable/base_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14.5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/LoginProgress_Next"
        android:id="@+id/btn_pg4_next"
        android:onClick="Progress4Clock"
        android:textSize="@dimen/LoginProgressTextSize_Next_In_Button"/>

</RelativeLayout>
