<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/initsetting_activity_menubox_blank"
        android:text="@string/InitSetting_KR"
        android:textSize="10pt"
        android:textColor="#b0b2b2"
        android:textAlignment="center"
        android:id="@+id/init_btn_korean"
        android:onClick="InitClick"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/initsetting_activity_menubox_blank"
        android:text="@string/InitSetting_EN"
        android:textSize="10pt"
        android:layout_marginTop="25dp"
        android:textColor="#b0b2b2"
        android:textAlignment="center"
        android:textStyle="normal"
        android:id="@+id/init_btn_English"
        android:onClick="InitClick"
        />
</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="51.7dp"
        android:textColor="#ffffff"
        android:background="#b0e6dc"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:text="@string/InitSetting_Check"
        android:id="@+id/init_btn_check"
        android:onClick="InitClick"
        android:textSize="18.3sp"/>
</RelativeLayout>