<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Color_Layout_Background"
    tools:context="com.iguideu.signup.SignUpProgress1">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_height="10dp">
        <TextView
            android:layout_width="match_parent"
            android:background="@drawable/progress_bar"
            android:layout_weight="8"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="match_parent"
            android:background="@color/Color_Layout_Background"
            android:layout_weight="2"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Color_White"
        android:background="@mipmap/okbt"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:text="@string/LoginProgress_Next"
        android:id="@+id/btn_progress1_next"
        android:onClick="Progress1Clock"
        android:textSize="@dimen/LoginProgressTextSize_Next_In_Button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/LoginProgress1_MainText"
        android:textColor="@color/Color_All_Primary_Text"
        android:textSize="@dimen/LoginProgressTextSize_Main_Text"
        android:id="@+id/progress1_text"
        android:layout_marginTop="112dp"/>

    <EditText
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:textColor="@color/Color_All_Primary_Text"
        android:hint="@string/LoginProgress1_First_Name"
        android:textSize="@dimen/All_Text_Size_Primary"
        android:paddingLeft="15dp"
        android:backgroundTint="#d8d8d8"
        android:layout_below="@id/progress1_text"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/edit_progress1_firstname"
        android:inputType="text"
        />

    <EditText
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:textColor="@color/Color_All_Primary_Text"
        android:hint="@string/LoginProgress1_Last_Name"
        android:textSize="@dimen/All_Text_Size_Primary"
        android:paddingLeft="15dp"
        android:backgroundTint="@color/Color_EditText_Line"
        android:layout_below="@id/edit_progress1_firstname"
        android:layout_marginTop="49.3dp"
        android:id="@+id/edit_progress1_secondname"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        />
</RelativeLayout>
