<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Color_White">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="326.3dp"
        android:gravity="center_horizontal"
        android:id="@+id/profile_Container"
        android:background="@color/Color_White">
        <com.iguideu.custom_view.RoundedImageView
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_marginTop="32.7dp"
            android:id="@+id/profile_Change_Btn"
            android:layout_centerHorizontal="true"
            android:background="@color/Color_White"
            />
        <TextView
            android:id="@+id/profile_Name_Text"
            android:layout_below="@+id/profile_Change_Btn"
            android:layout_width="match_parent"
            android:layout_height="27.3dp"
            android:layout_marginTop="17.7dp"
            android:gravity="center_horizontal"
            android:text="도로시"
            android:textSize="18sp"
            android:textColor="@color/Color_All_Primary_Text"
            />
        <TextView
            android:id="@+id/profile_Change_Text"
            android:layout_below="@+id/profile_Name_Text"
            android:layout_width="match_parent"
            android:layout_height="17.3dp"
            android:gravity="center_horizontal"
            android:text="@string/profile_Change_Text"
            android:textSize="11.7sp"
            android:textColor="#b0b2b2"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_Container"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/setting_toGuide"
            android:background="@color/Color_White"
            android:text="@string/setting_change_guide_kr"
            android:textColor="@color/Color_Setting_Text"
            android:gravity="center_vertical"
            android:textSize="18.3sp"
            android:letterSpacing="0.2"
            android:paddingLeft="27.7dp"
            android:onClick="InitClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/setting_Language"
            android:background="@color/Color_White"
            android:text="@string/setting_language_kr"
            android:textColor="@color/Color_Setting_Text"
            android:gravity="center_vertical"
            android:textSize="18.3sp"
            android:letterSpacing="0.2"
            android:paddingLeft="27.7dp"
            android:onClick="InitClick"
            style="?android:attr/borderlessButtonStyle"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/setting_Envir"
            android:background="@color/Color_White"
            android:text="@string/setting_envir_kr"
            android:textColor="@color/Color_Setting_Text"
            android:gravity="center_vertical"
            android:textSize="18.3sp"
            android:letterSpacing="0.2"
            android:paddingLeft="27.7dp"
            android:onClick="InitClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/setting_Logout"
            android:background="@color/Color_White"
            android:text="@string/setting_logout_kr"
            android:textColor="@color/Color_Setting_Text"
            android:gravity="center_vertical"
            android:textSize="18.3sp"
            android:letterSpacing="0.2"
            android:paddingLeft="27.7dp"
            android:onClick="InitClick"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</RelativeLayout>