<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="13.3dp"
    android:paddingBottom="13.3dp">
    <com.guanaj.easyswipemenulibrary.EasySwipeMenuLayout
        android:id="@+id/es"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentView="@+id/route_add_item_list"
        app:rightMenuView="@+id/route_add_item_list_right">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/route_add_item_list">
    <ImageView
        android:layout_width="18.7dp"
        android:layout_height="18.7dp"
        android:src="@mipmap/marker_1"
        android:layout_marginLeft="29.3dp"
        android:id="@+id/custom_list_marker"
        />
    <EditText
        android:layout_width="100.3dp"
        android:layout_height="40.7dp"
        android:hint="@string/edit_route_add_place_name"
        android:textSize="16.7sp"
        android:textColorHint="@color/colorAccent"
        android:layout_toRightOf="@id/custom_list_marker"
        android:layout_marginLeft="13.3dp"
        android:inputType="text"
        android:backgroundTint="@color/Color_EditText_Line"
        android:id="@+id/edit_route_add_place_name"
        />

    <EditText
        android:layout_width="293dp"
        android:layout_height="34.7dp"
        android:inputType="text"
        android:hint="@string/edit_route_add_place_detail"
        android:textColorHint="@color/colorAccent"
        android:textSize="11.7sp"
        android:layout_below="@id/edit_route_add_place_name"
        android:id="@+id/edit_route_add_place_detail"
        android:layout_marginTop="15.3dp"
        android:backgroundTint="@color/Color_EditText_Line"
        android:layout_marginLeft="32dp"/>
</RelativeLayout>
    <LinearLayout
        android:id="@+id/route_add_item_list_right"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="@dimen/sp_16_7"
            android:textColor="@color/Color_White"
            android:background="@drawable/route_add_list_item_btn"
            android:text="@string/route_add_item_list_delete_Btn"
            android:id="@+id/route_add_item_list_delete_Btn"/>

    </LinearLayout>
    </com.guanaj.easyswipemenulibrary.EasySwipeMenuLayout>
</RelativeLayout>