<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="23dp"
    android:background="@color/Color_White"
    >
    <RelativeLayout
         android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recommend_Container1"
            android:layout_marginBottom="42.3dp">

            <TextView
                android:id="@+id/landmark_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landmark_kr_word"
                android:textSize="16.7sp"
                android:layout_marginBottom="10dp"/>


            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:id="@+id/recommend_attraction_RecyclerView"
                android:layout_below="@+id/landmark_Text"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recommend_Container2"
            android:layout_below="@+id/recommend_Container1"
            android:layout_marginBottom="42.3dp">

            <TextView
                android:id="@+id/favorite_Route_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_route_kr"
                android:textSize="16.7sp"
                android:layout_marginBottom="10dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="149dp"

                android:id="@+id/recommend_route_RecyclerView"
                android:layout_below="@+id/favorite_Route_Text"
                >

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recommend_Container3"
            android:layout_below="@+id/recommend_Container2"
            android:layout_marginBottom="42.3dp">

            <TextView
                android:id="@+id/favorite_guide_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_guide_kr"
                android:textSize="16.7sp"
                android:layout_marginBottom="10dp"/>


            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:id="@+id/recommend_guide_RecyclerView"
                android:layout_below="@+id/favorite_guide_Text"
                />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>